--- a/style.css
+++ b/style.css
@@ -1,1 +1,91 @@
-body
+/* Global Layout Set-up */
+* { 
+  box-sizing: border-box;
+}
+  
+body {
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  font-family: 'Roboto', sans-serif;
+  color: #FFFFFF
+  background: #f7f5f0;
+}
+
+/* Link Styles */
+
+a {
+  text-decoration: none;
+  color: #0499ff;
+}
+a:hover {
+  color: #6633ff;
+}
+
+h3 {
+  font-family: "Impact", Charcoal, sans-serif;
+  color: white;  
+  text-shadow: 4px 4px 4px #3399CC;
+} 
+
+/* Accordian Settings */
+.accordion {
+    background-color: #FFFFFF;
+    color: #white;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    text-align: left;
+    border: none;
+    outline: none;
+    transition: 0.4s;
+}
+
+.active, .accordion:hover {
+    background-color: #white;
+}
+
+.panel {
+    padding: 0 18px;
+    background-color: white;
+    display: none;
+    overflow: hidden;
+} 
+
+/* Section Styles */
+
+header {
+  text-align: center;
+  background: url('https://static.zerochan.net/Zelda.no.Densetsu%3A.Mujura.no.Kamen.full.1540990.jpg') no-repeat top center ;
+  background-size: cover;
+  overflow: hidden;
+  padding-top: 200px;
+}
+header {
+  line-height: 1.5;
+}
+header .profile-image {
+  margin-top: 50x;
+  width: 120x;
+  height: 120px;
+  border-radius: 100%;
+  border: 3px solid white;
+  transition: all .5s;
+}
+header .profile-image:hover {
+  transform: scale(3) rotate(360deg);
+}
+.tag {
+  background-color: #efefef;
+  color: black;
+  padding: 10px;
+  border-radius: 5px;
+  display: table;
+  margin: 10px auto;
+} 
+.location {
+  background-color: #222;
+  color: yellow;
+  font-family: "Arial", Helvetica, sans-serif;
+}
+
