--- a/style.css
+++ b/style.css
@@ -1,8 +1,3 @@
-/* Global Layout Set-up */
-* { 
-  box-sizing: border-box;
-}
-  
 body {
   margin: 0;
   padding: 0;
@@ -52,8 +47,6 @@ h3 {
     overflow: hidden;
 } 
 
-/* Section Styles */
-
 header {
   text-align: center;
   background: url('https://static.zerochan.net/Zelda.no.Densetsu%3A.Mujura.no.Kamen.full.1540990.jpg') no-repeat top center ;
@@ -61,9 +54,11 @@ header {
   overflow: hidden;
   padding-top: 200px;
 }
+
 header {
   line-height: 1.5;
 }
+
 header .profile-image {
   margin-top: 50x;
   width: 120x;
@@ -72,9 +67,11 @@ header .profile-image {
   border: 3px solid white;
   transition: all .5s;
 }
+
 header .profile-image:hover {
   transform: scale(3) rotate(360deg);
 }
+
 .tag {
   background-color: #efefef;
   color: black;
@@ -83,9 +80,39 @@ header .profile-image:hover {
   display: table;
   margin: 10px auto;
 } 
+
 .location {
   background-color: #222;
   color: yellow;
   font-family: "Arial", Helvetica, sans-serif;
 }
 
+footer {
+  width: 100%;
+  min-height: 10px;
+  padding: 20px 0 40px 20px;
+}
+
+
+
+/* Styles for larger screens */
+@media screen and (min-width: 720px) {
+  
+
+  header {
+    min-height: 550px;
+  }
+
+  main {
+    padding-top: 50px;
+  }
+
+  main p {
+    line-height: 1.6em;
+  }
+
+  footer {
+    font-size: 1.3em;
+    max-width: 1200px;
+    margin: 20px auto;
+  }
