--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ h3 {
 
 .panel {
     padding: 0 18px;
-    background-color: white;
+    background-color: blue;
     display: none;
     overflow: hidden;
 } 
