--- a/style.css
+++ b/style.css
@@ -38,12 +38,12 @@ h3 {
 }
 
 .active, .accordion:hover {
-    background-color: #white;
+    background-color: #blue;
 }
 
 .panel {
     padding: 0 18px;
-    background-color: blue;
+    background-color: white;
     display: none;
     overflow: hidden;
 } 
