--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+{ 
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -7,46 +11,41 @@ body {
   background: #f7f5f0;
 }
 
-/* Link Styles */
-
-a {
-  text-decoration: none;
-  color: #0499ff;
-}
-
-a:hover {
-  color: #6633ff;
-}
-
 h3 {
   font-family: "Impact", Charcoal, sans-serif;
   color: white;  
-  text-shadow: 4px 4px 4px #3399CC;
+  text-shadow: 3px 3px 3px #3399CC;
 } 
 
-/* Accordian Settings */
-.accordion {
-    background-color: #FFFFFF;
-    color: #white;
-    cursor: pointer;
-    padding: 18px;
-    width: 100%;
-    text-align: left;
-    border: none;
-    outline: none;
-    transition: 0.4s;
-}
-
-.active, .accordion:hover {
-    background-color: #blue;
-}
-
-.panel {
-    padding: 0 18px;
-    background-color: white;
-    display: none;
+/* The navigation bar */
+.navbar {
     overflow: hidden;
-} 
+    background-color: #ffffff;
+    position: relative; /* Set the navbar to fixed position */
+    bottom: 0; /* Position the navbar at the top of the page */
+    width: 100%; /* Full width */
+}
+
+/* Links inside the navbar */
+.navbar a {
+    float: left;
+    display: block;
+    color: #000000;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+/* Change background on mouse-over */
+.navbar a:hover {
+    background: #a8a4a4;
+    color: black;
+}
+
+/* Main content */
+.main {
+    margin-top: 30px; /* Add a top margin to avoid content overlay */
+}
 
 header {
   text-align: center;
@@ -62,8 +61,8 @@ header {
 
 header .profile-image {
   margin-top: 50x;
-  width: 120x;
-  height: 120px;
+  width: 160x;
+  height: 160px;
   border-radius: 100%;
   border: 3px solid white;
   transition: all .5s;
@@ -85,35 +84,5 @@ header .profile-image:hover {
 .location {
   background-color: #222;
   color: yellow;
-  font-family: "Arial", Helvetica, sans-serif;
+  font-family: "Arial", Helvetica, sans-serif;  
 }
-
-footer {
-  width: 100%;
-  min-height: 10px;
-  padding: 20px 0 40px 20px;
-}
-
-
-
-/* Styles for larger screens */
-@media screen and (min-width: 720px) {
-  
-
-  header {
-    min-height: 550px;
-  }
-
-  main {
-    padding-top: 50px;
-  }
-
-  main p {
-    line-height: 1.6em;
-  }
-
-  footer {
-    font-size: 1.3em;
-    max-width: 1200px;
-    margin: 20px auto;
-  }
