--- a/style.css
+++ b/style.css
@@ -17,35 +17,102 @@ h3 {
   text-shadow: 4px 4px 4px #3399CC;
 } 
 
-/* The navigation bar */
+/* Top navigation bar */
 .navbar {
     overflow: hidden;
-    background-color: #ffffff;
-    position: relative; /* Set the navbar to fixed position */
-    bottom: 0; /* Position the navbar at the top of the page */
-    width: 50%;
+    background-color: rgba(255,255,255,0);
+    position: fixed;
+    top: 0;
+    width: 100%;
 }
 
 /* Links inside the navbar */
 .navbar a {
     float: left;
     display: block;
-    color: #000000;
-    text-align: center;
+    color: #ffffff;
+    text-shadow: 2px 2px 2px #3399CC;
+    text-align: left;
+    font-size: 25px;
     padding: 14px 16px;
     text-decoration: none;
 }
 
 /* Change background on mouse-over */
 .navbar a:hover {
+    animation: bounce 1s;
     background: #3399CC;
-    color: black;
+    background: rgb(3,194,255,0.6);
+    color: ffffff;
 }
 
 /* Main content */
 .main {
     margin-top: 30px; /* Add a top margin to avoid content overlay */
 }
+
+/* Style the tab */
+.tab {
+    float: left;
+    border: 1px solid #ccc;
+    background-color: #f1f1f1;
+    width: 30%;
+    height: 300px;
+}
+
+/* Style the buttons that are used to open the tab content */
+.tab button {
+    display: block;
+    background-color: inherit;
+    color: black;
+    padding: 22px 16px;
+    width: 100%;
+    border: none;
+    outline: none;
+    text-align: left;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+/* Change background color of buttons on hover */
+.tab button:hover {
+    background-color: #ddd;
+}
+
+/* Create an active/current "tab button" class */
+.tab button.active {
+    background-color: #ccc;
+}
+
+/* Style the tab content */
+.tabcontent {
+    float: left;
+    padding: 0px 12px;
+    border: 1px solid #ccc;
+    width: 70%;
+    border-left: none;
+    height: 300px;
+}
+
+
+@keyframes bounce {
+	0%, 20%, 60%, 100% {
+		-webkit-transform: translateY(0);
+		transform: translateY(0);
+	}
+
+	40% {
+		-webkit-transform: translateY(-20px);
+		transform: translateY(-20px);
+	}
+
+	80% {
+		-webkit-transform: translateY(-10px);
+		transform: translateY(-10px);
+	}
+}
+
+
 
 header {
   text-align: center;
