--- a/style.css
+++ b/style.css
@@ -53,25 +53,21 @@ h3 {
 
 /* Style the tab */
 .tab {
-    float: left;
+    overflow: hidden;
     border: 1px solid #ccc;
     background-color: #f1f1f1;
-    width: 30%;
-    height: 300px;
 }
 
-/* Style the buttons that are used to open the tab content */
+/* Style the buttons inside the tab */
 .tab button {
-    display: block;
     background-color: inherit;
-    color: black;
-    padding: 22px 16px;
-    width: 100%;
+    float: left;
     border: none;
     outline: none;
-    text-align: left;
     cursor: pointer;
+    padding: 14px 16px;
     transition: 0.3s;
+    font-size: 17px;
 }
 
 /* Change background color of buttons on hover */
@@ -79,19 +75,17 @@ h3 {
     background-color: #ddd;
 }
 
-/* Create an active/current "tab button" class */
+/* Create an active/current tablink class */
 .tab button.active {
     background-color: #ccc;
 }
 
 /* Style the tab content */
 .tabcontent {
-    float: left;
-    padding: 0px 12px;
+    display: none;
+    padding: 6px 12px;
     border: 1px solid #ccc;
-    width: 70%;
-    border-left: none;
-    height: 300px;
+    border-top: none;
 }
 
 
@@ -152,15 +146,4 @@ header .profile-image:hover {
   background-color: #222;
   color: yellow;
   font-family: "Arial", Helvetica, sans-serif;  
-}
-
-.card {
-  margin: 30px;
-  padding: 20px 40px 40px;
-  max-width: 575px;
-  text-align: left;
-  background: #fff;
-  border-bottom: 4px solid #ccc;
-  border-radius: 6px;
-  border-color: #3399CC;
 }
